--- a/app.ipynb
+++ b/app.ipynb
@@ -58,6 +58,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install dotenv mcp openai-agents polygon-api-client"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -178,20 +187,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Researcher is ready. Agent(name='Researcher', instructions=\"You are a financial researcher. You are able to search the web for interesting financial news,\\nlook for possible trading opportunities, and help with research.\\nBased on the request, you carry out necessary research and respond with your findings.\\nTake time to make multiple searches to get a comprehensive overview, and then summarize your findings.\\nIf there isn't a specific request, then just respond with investment opportunities based on searching latest news.\\nThe current datetime is 2025-05-20 14:27:08\\n\", handoff_description=None, handoffs=[], model='gpt-4o-mini', model_settings=ModelSettings(temperature=None, top_p=None, frequency_penalty=None, presence_penalty=None, tool_choice=None, parallel_tool_calls=None, truncation=None, max_tokens=None, reasoning=None, metadata=None, store=None, include_usage=None, extra_query=None, extra_body=None, extra_headers=None), tools=[], mcp_servers=[<agents.mcp.server.MCPServerStdio object at 0x104d68c50>, <agents.mcp.server.MCPServerStdio object at 0x106ef5bb0>, <agents.mcp.server.MCPServerStdio object at 0x106ef5cd0>], mcp_config={}, input_guardrails=[], output_guardrails=[], output_type=None, hooks=None, tool_use_behavior='run_llm_again', reset_tool_choice=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Here are the latest updates on Amazon:\n",
+       "\n",
+       "1. **Financial Performance**:\n",
+       "   - Amazon reported its first-quarter financial results for 2025, showing a 9% increase in net sales to **$155.7 billion**, compared to **$143.3 billion** in the same quarter last year. This growth reflects strong operational performance despite market challenges. More details can be found on [Amazon's Investor Relations](https://ir.aboutamazon.com/news-release/news-release-details/2025/Amazon-com-Announces-First-Quarter-Results/).\n",
+       "\n",
+       "2. **Stock Information**:\n",
+       "   - The stock quote for Amazon (AMZN) can be tracked on financial platforms like Yahoo Finance, where you can find the latest price, history, and news relevant to the stock. Check it out [here](https://finance.yahoo.com/quote/AMZN/).\n",
+       "\n",
+       "3. **Market Impact**:\n",
+       "   - There were discussions around Amazon's business strategies and stock performance, particularly following recent economic trends that might affect investor sentiment. Coverage includes various analytical reports available on platforms such as CBS News and Markets Insider.\n",
+       "\n",
+       "4. **Operational Insights**:\n",
+       "   - As part of its growth strategy, Amazon continues to focus on customer obsession, innovation, and operational excellence. This approach is expected to bolster its long-term market position.\n",
+       "\n",
+       "5. **Company Announcements**:\n",
+       "   - Amazon has also been involved in various public engagements and reports, further solidifying its brand image and market presence. More details can be followed on their dedicated news channels.\n",
+       "\n",
+       "For ongoing updates and detailed overviews, you might want to explore comprehensive financial news platforms such as [Global News](https://globalnews.ca/tag/amazon/) and [CBS News](https://www.cbsnews.com/tag/amazon/)."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# research_question = \"What's the latest news on Amazon?\"\n",
+    "research_question = \"What's the latest news on Amazon?\"\n",
     "\n",
-    "# for server in researcher_mcp_servers:\n",
-    "#     await server.connect()\n",
-    "# researcher = await get_researcher(researcher_mcp_servers)\n",
-    "# with trace(\"Researcher\"):\n",
-    "#     print(\"Researcher is ready.\", researcher)\n",
-    "#     result = await Runner.run(researcher, research_question)\n",
-    "# display(Markdown(result.final_output))\n",
-    "\n"
+    "for server in researcher_mcp_servers:\n",
+    "    await server.connect()\n",
+    "researcher = await get_researcher(researcher_mcp_servers)\n",
+    "with trace(\"Researcher\"):\n",
+    "    print(\"Researcher is ready.\", researcher)\n",
+    "    result = await Runner.run(researcher, research_question)\n",
+    "display(Markdown(result.final_output))\n"
    ]
   },
   {
@@ -205,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,23 +258,31 @@
      "output_type": "stream",
      "text": [
       "Reading account resource for Amar\n",
-      "params command='uv' args=['run', 'accounts_server.py'] env=None cwd=None encoding='utf-8' encoding_error_handler='strict'\n",
-      "streams (MemoryObjectReceiveStream(_state=MemoryObjectStreamState(max_buffer_size=0, buffer=deque([]), open_send_channels=1, open_receive_channels=1, waiting_receivers=OrderedDict(), waiting_senders=OrderedDict()), _closed=False), MemoryObjectSendStream(_state=MemoryObjectStreamState(max_buffer_size=0, buffer=deque([]), open_send_channels=1, open_receive_channels=1, waiting_receivers=OrderedDict(), waiting_senders=OrderedDict()), _closed=False))\n",
-      "Session created <mcp.client.session.ClientSession object at 0x108afb170>\n",
-      "Session initialized\n"
+      "Result:  meta=None contents=[TextResourceContents(uri=AnyUrl('accounts://accounts_server/Amar'), mimeType='text/plain', text='{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}')]\n"
      ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "amar_initial_strategy = \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\"\n",
-    "Account.get(\"Amar\").reset(amar_initial_strategy)\n",
-    "from mcp.client.stdio import stdio_client\n",
-    "import mcp\n",
     "from mcp import StdioServerParameters\n",
     "\n",
+    "amar_initial_strategy = \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\"\n",
+    "Account.get(\"Amar\").reset(amar_initial_strategy)\n",
     "params = StdioServerParameters(command=\"uv\", args=[\"run\", \"accounts_server.py\"], env=None)\n",
+    "account_server = MCPServerStdio({\"command\": \"uv\", \"args\": [\"run\", \"accounts_server.py\"]})\n",
     "\n",
-    "async def read_accounts_resource(name):\n",
+    "async def read_accounts_resource(name, server) -> str:\n",
     "    \"\"\"Read account information for the given name.\n",
     "    \n",
     "    Args:\n",
@@ -239,28 +292,67 @@
     "        Account report as a string\n",
     "    \"\"\"\n",
     "    print(f\"Reading account resource for {name}\")\n",
-    "    async with stdio_client(params) as streams:\n",
-    "        print(\"params\" , params)\n",
-    "        print(\"streams\", streams)\n",
-    "        async with mcp.ClientSession(*streams) as session:\n",
-    "            print(\"Session created\", session)    \n",
-    "            print(\"Session initialized\")\n",
-    "            result = await session.read_resource(f\"accounts://accounts_server/{name}\")\n",
-    "            print(\"result\", result)\n",
-    "            return result.contents[0].text\n",
+    "    \n",
+    "    \n",
+    "    result = await account_server.session.read_resource(f\"accounts://accounts_server/{name}\")\n",
+    "    print(\"Result: \", result)\n",
+    "    return result.contents[0].text\n",
+    "    # async with stdio_client(params) as streams:\n",
+    "    #     print(\"params\" , params)\n",
+    "    #     print(\"streams\", streams)\n",
+    "    #     async with mcp.ClientSession(*streams) as session:\n",
+    "    #         print(\"Session created\", session)    \n",
+    "    #         print(\"Session initialized\")\n",
+    "    #         result = await session.read_resource(f\"accounts://accounts_server/{name}\")\n",
+    "    #         print(\"result\", result)\n",
+    "    #         return result.contents[0].text\n",
     "    \n",
     "\n",
-    "display(Markdown(await read_accounts_resource(\"Amar\")))"
+    "await account_server.connect()\n",
+    "display(Markdown(await read_accounts_resource(name=\"Amar\", server=account_server)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading account resource for Amar\n",
+      "Result:  meta=None contents=[TextResourceContents(uri=AnyUrl('accounts://accounts_server/Amar'), mimeType='text/plain', text='{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0], [\"2025-05-20 14:56:32\", 10000.0], [\"2025-05-20 14:56:40\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0], [\"2025-05-20 14:56:32\", 10000.0], [\"2025-05-20 14:56:40\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "You are a day trader that aggressively buys and sells shares based on news and market conditions."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
-    "display(Markdown(await read_accounts_resource(\"Amar\")))\n",
+    "display(Markdown(await read_accounts_resource(\"Amar\", account_server)))\n",
     "display(Markdown(await read_strategy_resource(\"Amar\")))"
    ]
   },
@@ -273,14 +365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading account resource for Amar\n",
+      "Result:  meta=None contents=[TextResourceContents(uri=AnyUrl('accounts://accounts_server/Amar'), mimeType='text/plain', text='{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0], [\"2025-05-20 14:56:32\", 10000.0], [\"2025-05-20 14:56:40\", 10000.0], [\"2025-05-20 14:57:10\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}')]\n"
+     ]
+    }
+   ],
    "source": [
     "agent_name = \"Amar\"\n",
     "\n",
     "# Using MCP Servers to read resources\n",
-    "account_details = await read_accounts_resource(agent_name)\n",
+    "account_details = await read_accounts_resource(agent_name, account_server)\n",
     "strategy = await read_strategy_resource(agent_name)\n",
     "\n",
     "instructions = f\"\"\"\n",
@@ -305,9 +406,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "You are a trader that manages a portfolio of shares. Your name is Amar and your account is under your name, Amar.\n",
+       "You have access to tools that allow you to search the internet for company news, check stock prices, and buy and sell shares.\n",
+       "Your investment strategy for your portfolio is:\n",
+       "You are a day trader that aggressively buys and sells shares based on news and market conditions.\n",
+       "Your current holdings and balance is:\n",
+       "{\"name\": \"amar\", \"balance\": 10000.0, \"strategy\": \"You are a day trader that aggressively buys and sells shares based on news and market conditions.\", \"holdings\": {}, \"transactions\": [], \"portfolio_value_time_series\": [[\"2025-05-20 14:55:00\", 10000.0], [\"2025-05-20 14:56:32\", 10000.0], [\"2025-05-20 14:56:40\", 10000.0], [\"2025-05-20 14:57:10\", 10000.0]], \"total_portfolio_value\": 10000.0, \"total_profit_loss\": 0.0}\n",
+       "You have the tools to perform a websearch for relevant news and information.\n",
+       "You have tools to check stock prices.\n",
+       "You have tools to buy and sell shares.\n",
+       "You have tools to save memory of companies, research and thinking so far.\n",
+       "Please make use of these tools to manage your portfolio. Carry out trades as you see fit; do not wait for instructions or ask for confirmation.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Markdown(instructions))"
    ]
@@ -321,9 +446,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Summary of Trades Executed\n",
+       "\n",
+       "1. **Buy AMZN (Amazon)**\n",
+       "   - **Shares Bought**: 25\n",
+       "   - **Price**: $34.068 per share\n",
+       "   - **Rationale**: Analysts suggest this may be the last chance to buy Amazon under $200 with good future gains anticipated.\n",
+       "   - **Transaction Timestamp**: 2025-05-20 14:59:18\n",
+       "\n",
+       "2. **Buy NVDA (Nvidia)**\n",
+       "   - **Shares Bought**: 15\n",
+       "   - **Price**: $91.182 per share\n",
+       "   - **Rationale**: Nvidia's advancements in technology and positive market sentiment make it a strong investment opportunity.\n",
+       "   - **Transaction Timestamp**: 2025-05-20 14:59:18\n",
+       "\n",
+       "### Portfolio Update\n",
+       "- **Current Balance**: $7780.57\n",
+       "- **Holdings**:\n",
+       "  - Amazon: 25 shares\n",
+       "  - Nvidia: 15 shares\n",
+       "- **Total Portfolio Value**: $10,895.57\n",
+       "- **Total Profit/Loss**: +$895.57\n",
+       "\n",
+       "### Conclusion\n",
+       "These trades position the portfolio well within the booming tech sector, especially focusing on companies at the forefront of the AI revolution. Monitoring of these positions will continue as the market evolves."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for server in mcp_servers:\n",
     "    await server.connect()\n",
@@ -357,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
